--- a/packages/ui-library/src/css/searchbar.scss
+++ b/packages/ui-library/src/css/searchbar.scss
@@ -48,7 +48,8 @@ $searchbar-input-height: 38px;
         margin-left: $spacing-md;
         text-align: right;
 
-        :last-child {
+        :last-child,
+        .button:last-child {
             margin-right: 0;
         }
     }
